--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ function MM_swapImage() { //v3.0
       <br>
       </div>
       <div>
-     <iframe width="60%" height="60%" src="https://www.youtube.com/embed/8zqkIET81Oo" frameborder="0" allowfullscreen></iframe>
+    <center> <iframe width="70%" height="50%" src="https://www.youtube.com/embed/8zqkIET81Oo" frameborder="0" allowfullscreen></iframe></center>
      </div>
      </div> 
 </ul>
