--- a/index.html
+++ b/index.html
@@ -230,7 +230,8 @@ function MM_swapImage() { //v3.0
 
 El Fuerte de Guadalupe se levantó en 1862 al desatarse la lucha contra los invasores franceses que fueron derrotados en el enfrentamiento que ahí se produjo el 5 de mayo..</P>
     </div>
-       <img src="imagenes/fuer.jpg" width="30%" height="30%">
+       <p><img src="imagenes/fuer.jpg" width="30%" height="30%">         </p>
+       <p><a href="http://www.puebla.travel/es/ver-hacer/sitios-de-interes/espacios-naturales-3/item/parque-de-los-fuertes">clic para ver mas informacion</a></p>
   </div>
   <div data-role="footer" data-theme="a" data-position="fixed">
      <h4>Aplicacion siete, WKRM</h4>
